app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-spring
          image: rithvikrs/dockerdemo
          #image: public.ecr.aws/e0l8j8p0/demo-app:latest
          ports:
            - containerPort: 8080
