app-service-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
    - port: 8080
      targetPort: 8080
