app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  type: LoadBalancer
  selector:
      app: demo
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
