app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.rithvik
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-deployment
                port:
                  number: 8080
